--- a/frontend/HTML/profile.html
+++ b/frontend/HTML/profile.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" integrity="sha512-6S2HWzVFxruDlZxI3sXOZZ4/eJ8AcxkQH1+JjSe/ONCEqR9L4Ysq5JdT5ipqtzU7WHalNwzwBv+iE51gNHJNqQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <title>Profile</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" integrity="sha512-6S2HWzVFxruDlZxI3sXOZZ4/eJ8AcxkQH1+JjSe/ONCEqR9L4Ysq5JdT5ipqtzU7WHalNwzwBv+iE51gNHJNqQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Profile</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg py-3 navbar-light bg-warning">
@@ -19,7 +23,7 @@
         <a class="navbar-brand h1 mr-5 text-dark" href="/frontend/HTML/homepage.html">Crawlers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mr-3 ml-5 text-dark" href="/frontend/HTML/editorial.html">Editorials</a>
+          <a class="nav-link mr-3 ml-5 text-dark " href="/frontend/HTML/editorial.html">Editorials</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mr-3 text-dark" href="/frontend/HTML/search.html">Search Friends</a>
@@ -30,130 +34,268 @@
         <li class="nav-item">
             <a class="nav-link mr-3 text-dark" href="/frontend/HTML/upcomingcontests.html">Upcoming Contests</a>
         </li>
-        <li class="nav-item">
-          <a class="btn nav-link text-white ml-5" href="#" style="background-color: darkslateblue;">Username</a>
+        <li class="dropdown">
+          <button class="btn text-white ml-5 dropdown-toggle" type="button" href="#" style="background-color: darkslateblue;" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a href="/frontend/HTML/homepage.html" class="dropdown-item">Logout</a>
+            </div>
         </li>
-        <!-- <li class="nav-item">
-            <a class=" btn nav-link mr-3 ml-5 text-white" href="#">Logout</a>
-        </li> -->
       </ul>
     </div>
   </nav>
   <div class="container ml-5">
     <div class="row">
       <div class="col">
-        <div class="mt-5 h1 text-center">Sreehari Yermal</div>
+        <div class="mt-5 h1 text-center" id='usrnmae'><%=username%></div>
+
         <div class="mt-3 text-center font-italic text-muted">0 Problems authorized by Sreehari Yermal</div>
         <div class="mt-3 text-center h5 font-weight-bold">Accuracy</div>
-      <div class="container">
-        <table class="table mt-5">
-          <tbody>
-            <tr>
-              <td>
-                <a id="Codechef-profile-url" href="https://www.codechef.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="CodeChef" target="_blank">
-                    <div class="chip" id="codechef_chip">
-                        <img src="/frontend/IMG/codechef.ico" alt="CodeChef"/>
-                        <b id="site-accuracy-codechef">-</b>
+        <div class="container">
+         <table class="table mt-5">
+           <tbody>
+              <tr>
+                <td>
+                  <a id="Codechef-profile-url" href="https://www.codechef.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="CodeChef" target="_blank">
+                      <div class="chip" id="codechef_chip">
+                          <img src="/frontend/IMG/codechef.ico" alt="CodeChef"/>
+                          <b id="site-accuracy-codechef">-</b>
+                      </div>
+                  </a>
+                </td>
+                <td>
+                  <a id="Codeforces-profile-url" href="https://www.codeforces.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="CodeForces" target="_blank">
+                      <div class="chip" id="codeforces_chip">
+                          <img src="/frontend/IMG/codeforces.ico" alt="CodeForces"/>
+                          <b id="site-accuracy-codeforces">-</b>
+                      </div>
+                   </a>
+                </td>
+                <td>
+                  <a id="InterviewBit-profile-url" href="https://www.interviewbit.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="InterviewBit" target="_blank">
+                    <div class="chip" id="interviewbit_chip">
+                      <img src="/frontend/IMG/interviewbit.ico" alt="InterviewBit"/>
+                      <b id="site-accuracy-interviewbit">-</b>
                     </div>
-                </a>
-              </td>
-              <td>
-                <a id="Codeforces-profile-url" href="https://www.codeforces.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="CodeForces" target="_blank">
-                    <div class="chip" id="codeforces_chip">
-                        <img src="/frontend/IMG/codeforces.ico" alt="CodeForces"/>
-                        <b id="site-accuracy-codeforces">-</b>
+                  </a>
+                </td>
+                <td>
+                  <a id="LeetCode-profile-url" href="https://www.leetCode.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="LeetCode" target="_blank">
+                    <div class="chip" id="leetcode_chip">
+                      <img src="/frontend/IMG/leetcode.ico" alt="Leetcode"/>
+                      <b id="site-accuracy-leetcode">-</b>
                     </div>
-                 </a>
-              </td>
-              <td>
-                <a id="InterviewBit-profile-url" href="https://www.interviewbit.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="InterviewBit" target="_blank">
-                  <div class="chip" id="interviewbit_chip">
-                    <img src="/frontend/IMG/interviewbit.ico" alt="InterviewBit"/>
-                    <b id="site-accuracy-interviewbit">-</b>
-                  </div>
-                </a>
-            </td>
-            <td>
-              <a id="Leetcode-profile-url" href="https://www.leetcode.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="Leetcode" target="_blank">
-                <div class="chip" id="leetcode_chip">
-                    <img src="/frontend/IMG/leetcode.ico" alt="Leetcode"/>
-                    <b id="site-accuracy-leetcode">-</b>
-                </div>
-              </a>
-           </td>
-         </tr>
-        </tbody>
-      </table>
-      <table class="table mt-5">
-        <tbody>
-            <tr>
-              <td>
-                <a id="HackerRank-profile-url" href="https://www.hackerrank.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip=HackerRank" target="_blank">
-                  <div class="chip" id="hackerrank_chip">
-                    <img src="/frontend/IMG/hackerrank.ico" alt="HackerRank"/>
-                    <b id="site-accuracy-hackerrank">-</b>
-                  </div>
-                </a>
-              </td>
-              <td>
-                <a id="HackerEarth-profile-url" href="https://www.hackerearth.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="HackerEarth" target="_blank">
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <table class="table mt-5">
+            <tbody>
+              <tr>
+                <td>
+                  <a id="HackerRank-profile-url" href="https://www.hackerrank.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="HackerRank" target="_blank">
+                    <div class="chip" id="hackerrank_chip">
+                      <img src="/frontend/IMG/hackerrank.ico" alt="HackerRank"/>
+                      <b id="site-accuracy-hackerrank">-</b>
+                    </div>
+                  </a>
+                </td>
+                <td>
+                  <a id="HackerEarth-profile-url" href="https://www.hackerearth.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="HackerEarth" target="_blank">
                     <div class="chip" id="hackerearth_chip">
-                        <img src="/frontend/IMG/hackerearth.ico" alt="HackerEarth"/>
-                        <b id="site-accuracy-hackerearth">-</b>
+                      <img src="/frontend/IMG/hackerearth.ico" alt="HackerEarth"/>
+                      <b id="site-accuracy-hackerearth">-</b>
                     </div>
-                 </a>
-              </td>
-              <td>
-                <a id="Spoj-profile-url" href="https://www.spoj.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="Spoj" target="_blank">
-                  <div class="chip" id="spoj_chip">
-                    <img src="/frontend/IMG/spoj.ico" alt="Spoj"/>
-                    <b id="site-accuracy-spoj">-</b>
-                  </div>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <table class="table table-bordered table-hover mt-5">
-        <thead class="thead-dark">
+                  </a>
+                </td>
+                <td>
+                  <a id="Spoj-profile-url" href="https://www.spoj.com/" class="tooltipped" data-position="bottom" data-delay="30" data-tooltip="Spoj" target="_blank">
+                    <div class="chip" id="spoj_chip">
+                      <img src="/frontend/IMG/spoj.ico" alt="Spoj"/>
+                      <b id="site-accuracy-spoj">-</b>
+                    </div>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <table class="table table-bordered table-hover mt-5">
+          <thead class="thead-dark">
             <tr>
-                <th>CodeChef</th>
-                <th>Codeforces</th>
-                <th>InterviewBit</th>
-                <th>Leetcode</th>
-                <th>HackerRank</th>
-                <th>HackerEarth</th>
-                <th>Spoj</th>
+              <th>CodeChef</th>
+              <th>Codeforces</th>
+              <th>InterviewBit</th>
+              <th>LeetCode</th>
+              <th>HackerRank</th>
+              <th>HackerEarth</th>
+              <th>Spoj</th>
             </tr>
           </thead>
           <tbody>
-              <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-              </tr> 
-            </tbody>
-          </table>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr> 
+          </tbody>
+        </table>
       </div>
-      <div class="col m-auto">
-        <div class="text-center ml-5">
-          <img src="/frontend/IMG/piechart.png" alt="piechart">
+      <div class="col m-5">
+        <div class="chart-container m-5 ml-5" style="position: absolute; height:50vh; width:30vw">
+          <canvas id="myDoughnutChart"></canvas>
+          <script>
+          var ctx = document.getElementById('myDoughnutChart').getContext('2d');
+          var myChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+              labels: ['CodeChef', 'CodeForces', 'InterviewBit','LeetCode', 'HackerRank', 'HackerEarth', 'Spoj'],
+              datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3,10],
+                backgroundColor: [
+                  '#003f5c',
+                  '#374c80',
+                  '#7a5195',
+                  '#bc5090',
+                  '#ef5675',
+                  '#ff764a',
+                  '#ffa600'
+                ],
+                borderColor: [
+                  '#003f5c',
+                  '#374c80',
+                  '#7a5195',
+                  '#bc5090',
+                  '#ef5675',
+                  '#ff764a',
+                  '#ffa600'
+                ],
+                borderWidth: 1
+              }]
+            },
+            options: {
+              plugins: {
+                legend: {
+                  position: 'left',
+                }
+              }
+            }
+          });
+          </script>
         </div>
       </div>
     </div>
   </div>
-  <div class="container text-center">
-    <div class="h2 mt-5">Activity</div>
-    <img src="/frontend/IMG/bargrapgh.png">
+  <div class="container col h3 text-center mt-5">Contest Rating</div>
+  <div class=" container m-auto justify-content-center">
+    <div class="chart-container mt-5">
+      <canvas id="myLineChart" height="10px"; width="20px"></canvas>
+      <script>
+          var ctx = document.getElementById('myLineChart');
+          var myChart = new Chart(ctx, {
+              type: 'line',
+              data: {
+                  labels: ['January', 'February', 'March','April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+                  datasets: [{
+                      label: 'Data',
+                      data: [12, 19, 13, 23, 15, 22, 27, 17, 20, 23, 25, 30, 21],
+                      backgroundColor: [
+                          '#65338d',
+                          '#4770b3',
+                          '#d21f75',
+                          '#3b3689',
+                          '#50aed3',
+                          '#48b24f',
+                          '#e57438',
+                          '#569dd2',
+                          '#e4b031',
+                          '#84d257',
+                          '#cad93f',
+                          '#f5c8af'
+                      ],
+                      borderColor: [
+                          '#65338d',
+                          '#4770b3',
+                          '#d21f75',
+                          '#3b3689',
+                          '#50aed3',
+                          '#48b24f',
+                          '#e57438',
+                          '#569dd2',
+                          '#e4b031',
+                          '#84d257',
+                          '#cad93f',
+                          '#f5c8af'
+                      ],
+                      borderWidth: 3,
+                      pointBorderWidth:5,
+                  }]
+              },
+              options: {
+              }
+          });
+          </script>
+    </div>
   </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../../Scrapers/leetcode.js"></script>
+  <div class="h2 mt-5 text-center">Activity</div>
+  <div class="m-auto container">
+    <div class="chart-container mt-5">
+      <canvas id="myBarChart" height="10px"; width="20px"></canvas>
+      <script>
+        var ctx = document.getElementById('myBarChart');
+        var myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+            labels: ['January', 'February', 'March','April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'],
+            datasets: [{
+              label: 'Data',
+              data: [12, 19, 13, 23, 15, 22, 10, 17, 20, 15, 25, 20],
+              backgroundColor: [
+                '#65338d',
+                '#4770b3',
+                '#d21f75',
+                '#3b3689',
+                '#50aed3',
+                '#48b24f',
+                '#e57438',
+                '#569dd2',
+                '#e4b031',
+                '#84d257',
+                '#cad93f',
+                '#f5c8af'
+              ],
+              borderColor: [
+                '#65338d',
+                '#4770b3',
+                '#d21f75',
+                '#3b3689',
+                '#50aed3',
+                '#48b24f',
+                '#e57438',
+                '#569dd2',
+                '#e4b031',
+                '#84d257',
+                '#cad93f',
+                '#f5c8af'
+              ],
+              borderWidth: 1
+            }]
+          },
+          options: {
+          
+          }
+        });
+      </script>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../../Scrapers/leetcode.js"></script>
 </body>
 </html>
